--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my-second-repo</title>
+<link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
-    
+     <h2>Im shazidul islam saikat </h2>
+     <p>Right now i am pretty much nervous </p>
+
+
 </body>
-</html>
+</html> 
